@@ -1,5 +1,5 @@
-/**
- * Copyright 2003 - 2016 The eFaps Team
+/*
+ * Copyright 2003 - 2019 The eFaps Team
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -42,7 +42,7 @@ public abstract class AbstractAutomaticCache<T extends CacheObjectInterface>
         if (!hasEntries()) {
             initialize(AbstractAutomaticCache.class);
         }
-        return getCache4Id().get(new Long(_id));
+        return getCache4Id().get(Long.valueOf(_id));
     }
 
     /**
